<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:backgroundTint="#949ca4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="#949ca4"
        android:id="@+id/layout2"
        android:layout_margin="2dp"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="@+id/ProductPrice"
        app:layout_constraintStart_toEndOf="@+id/ProductPrice">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="Price:"
            android:textStyle="bold"
            android:textColor="#ff9999"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/layout2"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:text="Size:"
            android:textColor="#ff9999"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2" />

        <TextView
            android:id="@+id/ProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/imageView"
            android:text="Product Name"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/id" />

        <TextView
            android:id="@+id/ProductSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ProductName"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/imageView"
            android:text="Product Size"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/ProductName" />

        <TextView
            android:id="@+id/ProductPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ProductSize"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/imageView"
            android:text="Product Price"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/ProductSize" />

        <TextView
            android:id="@+id/id"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="91dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Product:"
            android:textStyle="bold"
            android:textColor="#ff9999"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/id" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>